--- a/.github/workflows/oidc.yml
+++ b/.github/workflows/oidc.yml
@@ -3,7 +3,7 @@ on:
   push
 env:
   BUCKET_NAME : "ps360dev2"
-  AWS_REGION : "us-west-2"
+  AWS_REGION : "us-east-1"
 # permission can be added at job level or workflow level    
 permissions:
       id-token: write
