--- a/.github/workflows/oidc.yml
+++ b/.github/workflows/oidc.yml
@@ -17,7 +17,7 @@ jobs:
       - name: configure aws credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          role-to-assume: arn:aws:iam::368752026550:role/githuboidc
+          role-to-assume: arn:aws:iam::368752026550:role/s3oidc
           role-session-name: samplerolesession
           aws-region: ${{ env.AWS_REGION }}
       # Upload a file to AWS s3
