--- a/.github/workflows/oidc.yml
+++ b/.github/workflows/oidc.yml
@@ -23,4 +23,4 @@ jobs:
       # Upload a file to AWS s3
       - name:  Copy RDS to s3
         run: |
-          aws s3 cp ./RDS/cluster1.txt s3://${{ env.BUCKET_NAME }}/
+          aws s3 cp ./RDS/credentials.tf s3://${{ env.BUCKET_NAME }}/
