--- a/.github/workflows/oidc.yml
+++ b/.github/workflows/oidc.yml
@@ -21,6 +21,6 @@ jobs:
           role-session-name: samplerolesession
           aws-region: ${{ env.AWS_REGION }}
       # Upload a file to AWS s3
-      - name:  Copy RDS to s3
+      - name:  Copy python to s3
         run: |
-          aws s3 cp ./python/RDS/providers.tf.txt s3://${{ env.BUCKET_NAME }}/
+          aws s3 cp ./RDS/providers.tf.txt s3://${{ env.BUCKET_NAME }}/
