--- a/.github/workflows/oidc.yml
+++ b/.github/workflows/oidc.yml
@@ -23,4 +23,4 @@ jobs:
       # Upload a file to AWS s3
       - name:  Copy python to s3
         run: |
-          aws s3 cp ./RDS/terraform postgres cluster script/main.tf s3://${{ env.BUCKET_NAME }}/
+          aws s3 cp ./RDS/git to s3 sync main.yaml.txt s3://${{ env.BUCKET_NAME }}/
