--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
 
     - name: Copy files to the test website with the AWS CLI
       run: |
-        aws s3 sync ./RDS s3://ps360dev2
+        aws s3 sync ./RDS/terraform postgrs script/provider.tf s3://ps360dev2
 
     - name: Configure AWS credentials from Production account
       uses: aws-actions/configure-aws-credentials@v1
@@ -36,4 +36,4 @@ jobs:
 
     - name: Copy files to the production website with the AWS CLI
       run: |
-        aws s3 sync ./RDS/terraform postgres cluster script/main.tf s3://ddl.tf
+        aws s3 sync ./RDS/ s3://ddl.tf
