--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,4 +34,4 @@ jobs:
         aws-region: us-west-2
 
     - name: Copy files to the production website with the AWS CLI
-      run: aws s3 sync ./RDS/credentials.tf.tf s3://ddl.tf --delete
+      run: aws s3 sync ./RDS/credentials.tf s3://ddl.tf --delete
