--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,7 @@ jobs:
         aws-region: us-west-2
 
     - name: Copy files to the test website with the AWS CLI
-      run: aws s3 sync ./RDS/cluster1.txt s3://ps360dev2 --delete
+      run: aws s3 sync ./RDS s3://ps360dev2 --delete
 
     - name: Configure AWS credentials from Production account
       uses: aws-actions/configure-aws-credentials@v1
@@ -34,4 +34,4 @@ jobs:
         aws-region: us-west-2
 
     - name: Copy files to the production website with the AWS CLI
-      run: aws s3 sync ./RDS/credentials.tf s3://ddl.tf --delete
+      run: aws s3 sync ./RDS s3://ddl.tf --delete
