--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,7 @@ jobs:
         aws-region: us-west-2
 
     - name: Copy files to the test website with the AWS CLI
-      run: aws s3 sync ./RDS/cluster2.txt s3://ps360dev2
+      run: aws s3 sync ./RDS s3://ps360dev2
 
     - name: Configure AWS credentials from Production account
       uses: aws-actions/configure-aws-credentials@v1
@@ -34,4 +34,4 @@ jobs:
         aws-region: us-west-2
 
     - name: Copy files to the production website with the AWS CLI
-      run: aws s3 sync ./lambda-python/ddl.py s3://ddl.tf
+      run: aws s3 sync ./lambda-python s3://ddl.tf
