--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,4 +34,4 @@ jobs:
         aws-region: us-west-2
 
     - name: Copy files to the production website with the AWS CLI
-      run: aws s3 sync ./lambda-python s3://ddl.tf
+      run: aws s3 sync .lambda-python/ambda to RDS connection code.txt s3://ddl.tf
