--- a/.github/workflows/oidc.yml
+++ b/.github/workflows/oidc.yml
@@ -25,4 +25,4 @@ jobs:
       # Upload a file to AWS s3
       - name:  sync python to s3
         run: |
-           aws s3 sync ./RDS s3://${{ env.BUCKET_NAME }}/
+           aws s3 sync ./RDS/terraform postgres cluster script/main.tf s3://${{ env.BUCKET_NAME }}/
