--- a/.github/workflows/oidc.yml
+++ b/.github/workflows/oidc.yml
@@ -29,4 +29,4 @@ jobs:
       # Upload a file to AWS s3
       - name:  sync python to s3
         run: |
-           aws s3 sync ./RDS/cluster1.txt s3://${{ env.BUCKET_NAME }}/
+           aws s3 sync ./RDS/ s3://${{ env.BUCKET_NAME }}/
