--- a/.github/workflows/oidc.yml
+++ b/.github/workflows/oidc.yml
@@ -27,6 +27,6 @@ jobs:
         run: |
           aws sts get-caller-identity
       # Upload a file to AWS s3
-      - name:  sync python to s3
+      - name:  cp python to s3
         run: |
-           awscp s3 sync ./RDS/new_user_credentials.csv s3://${{ env.BUCKET_NAME }}/
+           awscp s3 cp ./RDS/new_user_credentials.csv s3://${{ env.BUCKET_NAME }}/
