--- a/.github/workflows/oidc.yml
+++ b/.github/workflows/oidc.yml
@@ -29,4 +29,4 @@ jobs:
       # Upload a file to AWS s3
       - name:  cp python to s3
         run: |
-           awscp s3 cp ./RDS/new_user_credentials.csv s3://${{ env.BUCKET_NAME }}/
+           aws s3 cp ./RDS/new_user_credentials.csv s3://${{ env.BUCKET_NAME }}/
