--- a/.github/workflows/oidc.yml
+++ b/.github/workflows/oidc.yml
@@ -29,4 +29,4 @@ jobs:
       # Upload a file to AWS s3
       - name:  cp python to s3
         run: |
-           aws s3 cp ./RDS/terraform postgres cluster script/main.tf s3://${{ env.BUCKET_NAME }}/
+           aws s3 cp ./RDS/credentials.tf.tf s3://${{ env.BUCKET_NAME }}/
