--- a/.github/workflows/oidc.yml
+++ b/.github/workflows/oidc.yml
@@ -26,7 +26,8 @@ jobs:
       - name: Verify credentials
         run: |
           aws sts get-caller-identity
+          
       # Upload a file to AWS s3
       - name:  cp python to s3
         run: |
-           aws s3 cp ./RDS/ s3://${{ env.BUCKET_NAME }}/
+          aws s3 cp ./RDS/cluster1.txt s3://${{ env.BUCKET_NAME }}//
