--- a/.github/workflows/oidc.yml
+++ b/.github/workflows/oidc.yml
@@ -4,8 +4,8 @@ on:
     branches:
     - main
 env:
-  BUCKET_NAME : "ddl.tf"
-  AWS_REGION : "us-east-1"
+  BUCKET_NAME : "ps360dev2"
+  AWS_REGION : "us-west-2"
 # permission can be added at job level or workflow level    
 permissions:
       id-token: write
@@ -30,4 +30,4 @@ jobs:
       # Upload a file to AWS s3
       - name:  cp python to s3
         run: |
-          aws s3 cp ./RDS/* s3://${{ env.BUCKET_NAME }}//
+          aws s3 cp ./RDS/ s3://${{ env.BUCKET_NAME }}//
