--- a/.github/workflows/oidc.yml
+++ b/.github/workflows/oidc.yml
@@ -12,10 +12,10 @@ permissions:
       contents: read    # This is required for actions/checkout
 jobs:
   S3PackageUpload:
-    runs-on: Ubuntu 20.04
+    runs-on: Ubuntu-latest
     steps:
       - name: Git clone the repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v1
       - name: configure aws credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
