--- a/.github/workflows/oidc.yml
+++ b/.github/workflows/oidc.yml
@@ -12,7 +12,7 @@ permissions:
       contents: read    # This is required for actions/checkout
 jobs:
   S3PackageUpload:
-    runs-on: Ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - name: Git clone the repository
         uses: actions/checkout@v1
