--- a/.github/workflows/oidc.yml
+++ b/.github/workflows/oidc.yml
@@ -29,5 +29,4 @@ jobs:
           
       # Upload a file to AWS s3
       - name:  cp python to s3
-        run: |
-          aws s3 cp ./RDS/terraform postgres cluster script/* s3://${{ env.BUCKET_NAME }}/
+        run: aws s3 cp ./RDS/ s3://${{ env.BUCKET_NAME }}/
