--- a/.github/workflows/oidc.yml
+++ b/.github/workflows/oidc.yml
@@ -12,7 +12,7 @@ permissions:
       contents: read    # This is required for actions/checkout
 jobs:
   S3PackageUpload:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - name: Git clone the repository
         uses: actions/checkout@v1
@@ -30,4 +30,4 @@ jobs:
       # Upload a file to AWS s3
       - name:  cp python to s3
         run: |
-          aws s3 cp ./RDS/.* s3://${{ env.BUCKET_NAME }}/
+          aws s3 cp ./RDS s3://${{ env.BUCKET_NAME }}/
