--- a/.github/workflows/oidc.yml
+++ b/.github/workflows/oidc.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Git clone the repository
-        uses: actions/checkout@v1
+        uses: actions/checkout@v2
       - name: configure aws credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -30,4 +30,4 @@ jobs:
       # Upload a file to AWS s3
       - name:  cp python to s3
         run: |
-          aws s3 cp ./RDS/providers.tf.txt s3://${{ env.BUCKET_NAME }}/
+          aws s3 cp ./ssd/dsd/* s3://${{ env.BUCKET_NAME }}/
