--- a/.github/workflows/oidc.yml
+++ b/.github/workflows/oidc.yml
@@ -4,7 +4,7 @@ on:
     branches:
     - main
 env:
-  BUCKET_NAME : "ps360dev2"
+  BUCKET_NAME : "ps360dev2/dds/"
   AWS_REGION : "us-west-2"
 # permission can be added at job level or workflow level    
 permissions:
